I think I missunderstood PaymentGateway
